# spiner

./: .travis.yml  README.md  spiner.cabal  stack.yaml
src/Data/: Spiner.hs
test/: Spec.hs
test/Data/: SpinerSpec.hs
