name:                spiner
version:             0.1.0.0
synopsis:            Naive ANN experiments
description:         Please see README.md
homepage:            https://gitlab.com/jmerritt/spiner
license:             BSD3
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
copyright:           2016 Jonathan Merritt
category:            Data
build-type:          Simple
cabal-version:       >= 1.22

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  default-language:    Haskell2010
  build-depends:
      base       >= 4.7 && < 5

--executable spiner-exe
  --hs-source-dirs:      app
  --main-is:             Main.hs
  --ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  --build-depends:       base
                     --, spiner
  --default-language:    Haskell2010

test-suite spiner-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , spiner
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/jmerritt/spiner.git
